--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
+URL: https://github.com/msberends/plot3
+BugReports: https://github.com/msberends/plot3/issues
